<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment_Search">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical"
        android:background="@color/purple_200"
        android:padding="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="40dp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:padding="15dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ent_day"
            android:textSize="25dp"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/users_city"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:shadowColor="@color/black"
            android:textColor="@color/black"
            android:textSize="25dp"
            tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />

        <Button
            android:id="@+id/search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@android:color/black"

            android:background="@drawable/shape"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_margin="5dp">
            <TextView
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:textColor="@color/black"
                android:layout_weight="1"
                android:layout_marginTop="15dp"/>
            <TextView
                android:id="@+id/city_written"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:weightSum="2">
            <TextView
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:text="@string/temperature"
                android:layout_weight="1"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/temp_written"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:weightSum="2">
            <TextView
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:text="@string/air_pressure"
                android:layout_weight="1"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/airPres_written"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:weightSum="2">
            <TextView
                android:layout_width="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wind_speed"
                android:textColor="@color/black"/>
            <TextView
                android:id="@+id/windSpeed_written"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"/>
        </LinearLayout>

        <Button
            android:id="@+id/my"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="300dp"
            android:background="@drawable/shape"
            android:onClick="intent_Click"
            android:text="Моя погода"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</FrameLayout>