<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="@string/city"
            android:textColor="@color/black"
            android:layout_weight="1"
            android:layout_marginTop="15dp"/>
        <TextView
            android:id="@+id/city_written"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:layout_marginTop="15dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:weightSum="2">
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="@string/temperature"
            android:layout_weight="1"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/temp_written"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:weightSum="2">
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:text="@string/air_pressure"
            android:layout_weight="1"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/airPres_written"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        android:weightSum="2">
        <TextView
            android:layout_width="15dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wind_speed"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/windSpeed_written"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"/>
    </LinearLayout>

</LinearLayout>